# instamatic

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .project  .readthedocs.yaml  .zenodo.json  AUTHORS  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CalibStage.pkl  LICENSE  MANIFEST.in  RunInstamaticWithWatcher.bat  THANKS.md  environment.yml  mkdocs.yml  performance_tracker.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  setup_win.bat
.github/workflows/: build-artifacts.yml  ci.yml  code-style.yaml  publish.yml  pythonpackage.yml  test.yml
camera/: CCDCOM.h  camera.py
demos/: data_collection.ipynb  grid_montage.ipynb  grid_montage_collection.ipynb  montage_processing.ipynb  montage_processing_serialem.ipynb  nav.nav  readme.md
dmscript/: insteadmatic.s  readme.md  simulate_stream.s
docs/: Makefile  Thumbs.db  conf.py  config.md  config.rst  formats.md  formats.rst  generate_rst_docs.bat  gonio.md  gui.md  gui.rst  index.md  index.rst  make_programs_md.py  merlin.md  network.md  programs.md  programs.rst  readme.md  requirements.txt  setup.md  setup.rst  tem_api.md  tem_api.rst  tvips.md  tvips.rst
docs/_templates/: README.md
docs/api/: TEMController_TEMController.md  TEMController_deflectors.md  TEMController_lenses.md  TEMController_stage.md  TEMController_states.md  components_deflectors.md  components_lenses.md  components_stage.md  components_states.md  controller.md  index.md  instamatic_acquireatitems.md  instamatic_formats.md  instamatic_gridmontage.md  instamatic_montage.md  instamatic_tools.md
docs/examples/: data_collection.ipynb  data_collection.nblink  grid_montage_collection.ipynb  grid_montage_collection.nblink  index.md  montage_processing.ipynb  montage_processing.nblink  readme.md
docs/overrides/: main.html
instamatic/: IOFrame.py  ImgConversion.py  TEMController.py  XDS_template.INP  __init__.py  acquire_at_items.py  admin.py  adscimage.py  app.py  browser.py  cRED_experiment.py  calibrate_beamshift.py  calibrate_brightness.py  calibrate_diffshift.py  calibrate_directbeam.py  calibrate_pla.py  calibrate_stage_lowmag.py  calibrate_stage_mag1.py  calibration.py  config.py  cross_correlate.py  data_collection.py  dataconverter.py  exceptions.py  experiment.py  experiments.py  fileio.py  find_crystals.py  find_holes.py  flatfield.py  flatfield_tpx_2017-06-21.tiff  goniotool.py  gridmontage.py  image_utils.py  imreg.py  io.py  jeol_microscope.py  main.py  montage.py  mrc2npy.py  (+7 more)
instamatic/TEMController/: FEI_microscope.py  FEI_microscope_Simu.py  TEMController.py  __init__.py  config.py  config.yaml  deflectors.py  exceptions.py  fei_microscope.py  fei_simu_microscope.py  jeol_microscope.py  lenses.py  microscope.py  microscope_client.py  server_microscope.py  simu_microscope.py  stage.py  states.py  watcher.py
instamatic/adt/: experiment.py
instamatic/calibrate/: __init__.py  calibrate_beamshift.py  calibrate_brightness.py  calibrate_diffshift.py  calibrate_directbeam.py  calibrate_electron_dose.py  calibrate_imageshift12.py  calibrate_stage_lowmag.py  calibrate_stage_mag1.py  calibrate_stagematrix.py  center_z.py  filenames.py  fit.py
instamatic/camera/: CCDCOM.h  __init__.py  camera.py  camera_client.py  camera_dm.py  camera_emmenu.py  camera_gatan.py  camera_gatan2.py  camera_merlin.py  camera_serval.py  camera_server.py  camera_simu.py  camera_timepix.py  datastream_dm.py  fakevideostream.py  gatansocket3.py  merlin_io.py  orius.json  simulate.json  timepix.json  timepix_api.py  videostream.py
instamatic/config/: __init__.py  autoconfig.py  config.py  config.yaml  config_updater.py  defaults.yaml  global.yaml  readme.txt  settings.yaml  settings_FEI.yaml  utils.py
instamatic/cred/: ImgConversion.py  XDS_template.py  cRED_experiment.py  experiment.py
instamatic/experiments/: __init__.py
instamatic/formats/: TiffIO.py  __init__.py  adscimage.py  csvIO.py  mrc.py  util.py  xdscbf.py
instamatic/gui/: ADTframe.py  CtrlFrame.py  FEI_RotationCmder.py  IOFrame.py  REDframe.py  SEDframe.py  __init__.py  about_frame.py  aboutframe.py  autocred_frame.py  base_module.py  cREDframe.py  console_frame.py  cred_fei_frame.py  cred_frame.py  cred_tvips_frame.py  ctrl_frame.py  data_collection.py  debug_frame.py  debugframe.py  defocus_button.py  gui.py  io_frame.py  jobs.py  machine_learning_frame.py  main.py  modules.py  mpl_frame.py  prepare_experiment.py  red_frame.py  sed_frame.py  tomo_frame.py  videostream_frame.py
instamatic/holder/: CalibrateParas.ini  HolderController.py  XNano.py  holder.py
instamatic/neural_network/: __init__.py  neural_network.py  preprocess.py  preprocess_SerialRED.py  preprocess_image.py  weights.p
instamatic/processing/: ImgConversion.py  ImgConversionDM.py  ImgConversionTPX.py  ImgConversionTVIPS.py  TEMbkgClient.py  TEMbkgWatcher.py  XDS_template.py  XDS_templateDM.py  XDS_templateTPX.py  XDS_templateTVIPS.py  __init__.py  cross_correlate.py  fast_finder.py  find_crystals.py  find_crystals_ilastik.py  find_holes.py  flatfield.py  indexer.py  indexer_app.py  indexing_template.ipynb  lru_cache.py  process_images.py  projector.py  serialmerge.py  stretch_correction.py
instamatic/pyami/: arraystats.py  fileutil.py  mrc.py  resultcache.py
instamatic/pyscope/: baseinstrument.py  ccdcamera.py  config.py  falconframe.py  gatan.py  instruments.cfg  jeol.cfg  jeolcom.py  loggedmethods.py  magnifications.py  moduleconfig.py  remote.py  simccdcamera2.py  simtem.py  tem.py
notebooks/: readme.md
scripts/: browser.py  center_images_smv.py  diagnose_beam_drift.py  hitfinder.py  indexing_template.ipynb  learn.py  make_interval_movie.py  make_serialed_movie.py  mergeprep.py  process_dm.py  process_dm_t.py  process_tpx.py  process_tvips.py  reprocess_data.py  viewer.py
tests/: conftest.py  test_TEMController.py  test_camera.py  test_collections.py  test_ctrl.py  test_deprecated.py  test_experiments.py  test_formats.py  test_grid_mapping.py  test_merlin_io.py  test_pets_input.py  test_tools.py  test_utils.py  utils.py
tools/: generate_requirements_txt.py
(+314 files in other folders)
