[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = [
	'F',  # Pyflakes
	'E',  # pycodestyle (error)
	'W',    # pycodestyle (warning)
	# 'C90',  # mccabe
	'I',    # isort
	# 'N',    # pep8-naming
	# 'D',    # pydocstyle
	'UP',   # pyupgrade
	# 'YTT',  # flake8-2020
	# 'ANN',  # flake8-annotations
	# 'S',    # flake8-bandit
	'BLE',  # flake8-blind-except
	# 'FBT',  # flake8-boolean-trap
	# 'B',    # flake8-bugbear
	'A',    # flake8-builtins
	'COM',  # flake8-commas
	'C4',   # flake8-comprehensions
	# 'DTZ',  # flake8-datetimez
	# 'T10',  # flake8-debugger
	# 'EM',   # flake8-errmsg
	# 'EXE',  # flake8-executable
	# 'ISC',  # flake8-implicit-str-concat
	# 'ICN',  # flake8-import-conventions
	# 'G',    # flake8-logging-format
	# 'INP',  # flake8-no-pep420
	# 'PIE',  # flake8-pie
	# 'T20',  # flake8-print
	# 'PT',   # flake8-pytest-style
	# 'Q',    # flake8-quotes
	# 'RET',  # flake8-return
	# 'SIM',  # flake8-simplify
	'TID',  # flake8-tidy-imports
	# 'TCH',  # flake8-type-checking
	# 'ARG',  # flake8-unused-arguments
	# 'PTH',  # flake8-use-pathlib
	# 'ERA',  # eradicate
	# 'PD',   # pandas-vet
	# 'PGH',  # pygrep-hooks
	# 'PL',   # Pylint
	# 'PLC',  # Convention
	# 'PLE',  # Error
	# 'PLR',  # Refactor
	# 'PLW',  # Warning
	# 'TRY',  # tryceratops
]
ignore = [
    'F401',
    'F403',
    'F405',
    'F821',
    'F841',
    'E501',
    'A003',
]


# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ['A', 'B', 'C', 'D', 'E', 'F', 'I', 'UP', 'BLE', 'COM', 'C4', 'TID',]
unfixable = []

exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
    '.venv',
    'scripts',
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$'

target-version = 'py37'
line-length = 96


[tool.ruff.isort]
known-first-party = ['instamatic']

[tool.isort]
profile = 'black'
# force-single-line = true
