[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "instamatic"
version = "2.2.0"
description = "Python program for automated electron diffraction data collection"
readme = "readme.md"
requires-python = ">=3.9"
authors = [
	{name = "Stef Smeets", email = "s.smeets@esciencecenter.nl"},
]
maintainers = [
    {name = "Daniel Mariusz Tchoń", email = "tchon@fzu.cz"}
]
keywords = [
    "electron-crystallography",
    "electron-microscopy",
    "electron-diffraction",
    "serial-crystallography",
    "3D-electron-diffraction",
    "micro-ed",
    "data-collection",
    "automation",
]
license = {text = "BSD License"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "comtypes >= 1.1.7; sys_platform == 'win32'",
    "h5py >= 2.10.0",
    "ipython >= 7.11.1",
    "lmfit >= 1.0.0",
    "matplotlib >= 3.1.2",
    "mrcfile >= 1.1.2",
    "numpy >= 1.17.3",
    "pandas >= 1.0.0",
    "pillow >= 7.0.0",
    "pywinauto >= 0.6.8; sys_platform == 'windows'",
    "pyyaml >= 5.3",
    "scikit-image >= 0.17.1",
    "scipy >= 1.3.2",
    "tifffile >= 2019.7.26.2",
    "tqdm >= 4.41.1",
    "typing_extensions >= 4.0.0",
    "virtualbox >= 2.0.0",
    "pyserialem >= 0.3.2",
    "diffpy.structure",
]

[project.urls]
homepage = "https://github.com/instamatic-dev/instamatic"
issues = "http://github.com/instamatic-dev/instamatic/issues"
documentation = "https://instamatic.readthedocs.io"
changelog = "https://github.com/instamatic-dev/instamatic/releases"

[project.optional-dependencies]
develop = [
    "bump-my-version",
    "check-manifest",
    "pre-commit",
    "pytest >= 5.4.1",
    "coverage",
]
serval = [
    "serval-toolkit"
]
docs = [
    "markdown-include",
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-material",
    "mkdocstrings[python]",
]
publishing = [
    "twine",
    "wheel",
    "build",
]

[project.scripts]
"instamatic" = "instamatic.main:main"
"instamatic.controller" = "instamatic.controller:main_entry"
# experiments
"instamatic.serialed" = "instamatic.experiments.serialed.experiment:main"
"instamatic.camera" = "instamatic.camera.camera:main_entry"
# calibrate
"instamatic.calibrate_stage_lowmag" = "instamatic.calibrate.calibrate_stage_lowmag:main_entry"
"instamatic.calibrate_stage_mag1" = "instamatic.calibrate.calibrate_stage_mag1:main_entry"
"instamatic.calibrate_beamshift" = "instamatic.calibrate.calibrate_beamshift:main_entry"
"instamatic.calibrate_directbeam" = "instamatic.calibrate.calibrate_directbeam:main_entry"
"instamatic.calibrate_stagematrix" = "instamatic.calibrate.calibrate_stagematrix:main_entry"
"instamatic.calibrate_movie_delays" = "instamatic.calibrate.calibrate_movie_delays:main_entry"
"instamatic.flatfield" = "instamatic.processing.flatfield:main_entry"
"instamatic.stretch_correction" = "instamatic.processing.stretch_correction:main_entry"
"instamatic.calibrate_stage_rotation" = "instamatic.calibrate.calibrate_stage_rotation:main_entry"
"instamatic.calibrate_stage_translation" = "instamatic.calibrate.calibrate_stage_translation:main_entry"
# tools
"instamatic.browser" = "scripts.browser:main"
"instamatic.viewer" = "scripts.viewer:main"
"instamatic.defocus_helper" = "instamatic.gui.defocus_button:main"
"instamatic.find_crystals" = "instamatic.processing.find_crystals:main_entry"
"instamatic.find_crystals_ilastik" = "instamatic.processing.find_crystals_ilastik:main_entry"
"instamatic.learn" = "scripts.learn:main_entry"
# server
"instamatic.temserver" = "instamatic.server.tem_server:main"
"instamatic.camserver" = "instamatic.server.cam_server:main"
"instamatic.dialsserver" = "instamatic.server.dials_server:main"
"instamatic.VMserver" = "instamatic.server.vm_ubuntu_server:main"
"instamatic.xdsserver" = "instamatic.server.xds_server:main"
"instamatic.temserver_fei" = "instamatic.server.TEMServer_FEI:main"
"instamatic.goniotoolserver" = "instamatic.server.goniotool_server:main"
# setup
"instamatic.autoconfig" = "instamatic.config.autoconfig:main"

[tool.setuptools]
packages = ["instamatic"]
package-dir = {"" = "src"}
include-package-data = true

[tool.ruff]
target-version = 'py39'
line-length = 96

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",  # pycodestyle (warning)
    "I",  # isort
    "NPY201",  # numpy deprecations
]

ignore = [
    'F401',
    'F403',
    'F405',
    'F821',
    'F841',
    'E501',
    'A003',
]

[tool.ruff.lint.isort]
known-first-party = ['instamatic']
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.bumpversion]
current_version = "2.2.0"

[[tool.bumpversion.files]]
filename = "src/instamatic/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: \"{current_version}\""
replace = "version: \"{new_version}\""
