# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries
description = DPython program for automated electron diffraction data collection
keywords =
    electron-crystallography
    electron-microscopy
    electron-diffraction
    serial-crystallography
    3D-electron-diffraction
    micro-ed
    data-collection
    automation
long_description = file: README.md
long_description_content_type = text/markdown
name = instamatic
project_urls =
    Bug Tracker = hhttp://github.com/instamatic-dev/instamatic/issues
    Documentation = https://instamatic.readthedocs.io/
url = http://github.com/instamatic-dev/instamatic
version = 1.7.0


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    comtypes >= 1.1.7
    h5py >= 2.10.0
    ipython >= 7.11.1
    lmfit >= 1.0.0
    matplotlib >= 3.1.2
    mrcfile >= 1.1.2
    numpy >= 1.17.3
    pandas >= 1.0.0
    pillow >= 7.0.0
    pywinauto >= 0.6.8
    pyyaml >= 5.3
    scikit-image >= 0.17.1
    scipy >= 1.3.2
    tifffile >= 2019.7.26.2
    tqdm >= 4.41.1
    virtualbox >= 2.0.0
    pyserialem >= 0.3.2


[options.extras_require]
develop =
    check-manifest
    pre-commit
    flake8
    pytest >= 5.4.1
    pytest-cov >= 2.8.1
serval =
    serval-toolkit


[options.packages.find]
include = instamatic, instamatic.*, instamatic.experiments.*

[options.entry_points]
console_scripts =
    instamatic = instamatic.main:main
    instamatic.controller = instamatic.TEMController.TEMController:main_entry
    # experiments
    instamatic.serialed = instamatic.experiments.serialed.experiment:main
    instamatic.camera = instamatic.camera.camera:main_entry
    # calibrate
    instamatic.calibrate_stage_lowmag = instamatic.calibrate.calibrate_stage_lowmag:main_entry
    instamatic.calibrate_stage_mag1 = instamatic.calibrate.calibrate_stage_mag1:main_entry
    instamatic.calibrate_beamshift = instamatic.calibrate.calibrate_beamshift:main_entry
    instamatic.calibrate_directbeam = instamatic.calibrate.calibrate_directbeam:main_entry
    instamatic.calibrate_stagematrix = instamatic.calibrate.calibrate_stagematrix:main_entry
    instamatic.flatfield = instamatic.processing.flatfield:main_entry
    instamatic.stretch_correction = instamatic.processing.stretch_correction:main_entry
    # tools
    instamatic.browser = scripts.browser:main
    instamatic.viewer = scripts.viewer:main
    instamatic.defocus_helper = instamatic.gui.defocus_button:main
    instamatic.find_crystals = instamatic.processing.find_crystals:main_entry
    instamatic.find_crystals_ilastik = instamatic.processing.find_crystals_ilastik:main_entry
    instamatic.learn = scripts.learn:main_entry
    # server
    instamatic.temserver = instamatic.server.tem_server:main
    instamatic.camserver = instamatic.server.cam_server:main
    instamatic.dialsserver = instamatic.server.dials_server:main
    instamatic.VMserver = instamatic.server.vm_ubuntu_server:main
    instamatic.xdsserver = instamatic.server.xds_server:main
    instamatic.temserver_fei = instamatic.server.TEMServer_FEI:main
    instamatic.goniotoolserver = instamatic.server.goniotool_server:main
    # setup
    instamatic.autoconfig = instamatic.config.autoconfig:main
